--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "mockery/mockery": "^0.9.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6"
+        "phpunit/phpunit": "^5.6",
+        "orchestra/testbench": "~3.3"
     },
     "autoload": {
         "psr-4": {
