--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
     ],
     "require": {
         "php": "^5.6|^7.0|^7.1",
-        "laravel/framework": "^5.2|^5.3",
+        "laravel/framework": "^5.2|^5.3|^5.4",
         "mockery/mockery": "^0.9.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
-        "orchestra/testbench": "~3.3"
+        "orchestra/testbench": "^3.4",
+        "orchestra/database": "3.4.x-dev"
     },
     "autoload": {
         "psr-4": {
