--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^5.6|^7.0|^7.1",
-        "laravel/framework": "^5.2|^5.3|^5.4",
+        "laravel/framework": "5.2.*|5.3.*|5.4.*",
         "mockery/mockery": "^0.9.5"
     },
     "require-dev": {
