Make Laravel able to auto-discover the service provider..

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,12 @@
             "Dixie\\EloquentModelFuture\\Tests\\": "tests/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Dixie\\EloquentModelFuture\\ServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "stable"
 }
